# data-science

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: convert_notebooks.yml  deploy_jupyterlite.yml
learning/R/: 01-penguins-ggplot.html  01-penguins-ggplot.ipynb
sharing/names/: consolidate_names.py  create_names_table.sql  import_with_psql.sql  names_comparison_query.sql  names_ranking_query.sql  top_5_names_by_gender.sql  top_names_by_year.sql
sharing/pokemon/: clean.py  csvToPostgres.py  pokemon_schema.sql
sharing/sample-project-1/: 00_original_cleaning_template.py  01_data_cleaning_pipeline.py  02_data_visualization_toolkit.py  CLAUDE.md  README.md  create_json_dashboard.py  docker-compose.yml  executive-summary-guide.md  executive_summary_CDO.md  fix_grafana_dashboards.py  grafana_instructions.txt  grafana_setup.py  healthcare_sales_analysis_complete.ipynb  import_dashboard.py  kaggle_report.html  kaggle_report_generator.py  ml-for-data-work.md  ml-project-kickoff.md  model_performance_results.csv  tableau_daily_metrics.csv  tableau_data_prep.py  tableau_geographic_metrics.csv  tableau_instructions.txt  tableau_monthly_metrics.csv  tableau_product_metrics.csv  visualization_test_guide.html
sharing/sample-project-1/grafana/dashboards/: dashboard-config.yaml  ml_predictions.json  sales_overview.json
sharing/sample-project-1/grafana/datasources/: sqlite.yaml
src/data_science/learning/R/: .Rhistory  01-penguins-ggplot.R  02-hotel-bookings-instruction.rmd  02-hotel-bookings.R  02-hotel-bookings.ipynb  (+7 more)
(+12 files in other folders)
